{
    "name": "Player",
    "maps": [
        {
            "name": "Moving",
            "id": "b1c8fbec-dda6-4aca-bb97-3899e56a171e",
            "actions": [
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "689b7f34-de59-4b97-a697-0789d3c70047",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AutoDamage",
                    "type": "PassThrough",
                    "id": "2338146d-60a0-43fe-a18a-c4dc950c3e8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackController",
                    "type": "Button",
                    "id": "8d981d68-86a7-4fca-a003-0e860e467e95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b1f18c0a-a495-45d4-9fdb-0dfe1597c58c",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "f65d4e7c-5474-4322-bb48-2134eb4058d8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "dddc5352-0108-4bfa-a397-ea243510a2da",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "1021eb77-745f-426a-9296-8a2c7c4ab825",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "4078c2f4-09b0-4573-83d5-37c1ad3a2417",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "15c07a9d-f47b-42e6-823d-79115214391d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5786678b-507e-47fe-9242-59188946ce5e",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoDamage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "569273cf-51e6-4457-89e3-39a66cbfb042",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AttackController",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f3f8276-085d-41df-858c-38d839efe0f2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackController",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}